[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Enemies/Potato.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/Potato.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/Shadow.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.32997
height = 2.61305

[sub_resource type="CircleShape2D" id=2]
radius = 23.8348

[sub_resource type="CircleShape2D" id=3]
radius = 3.83014

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( -3, 0, 4, 0, 4, 4, -3, 4 )

[node name="potato" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = -7.0
margin_bottom = -7.0
rect_scale = Vector2( 0.15, 0.2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 5.374 )
scale = Vector2( 0.324759, 0.144868 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 2.18268, -4.7622 )
texture = ExtResource( 1 )
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.00473362 )
shape = SubResource( 1 )

[node name="Wzrok" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wzrok"]
position = Vector2( 0.297302, -0.148651 )
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Atak" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atak"]
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 9 )

[connection signal="body_entered" from="Wzrok" to="." method="_on_Wzrok_body_entered"]
[connection signal="body_exited" from="Wzrok" to="." method="_on_Wzrok_body_exited"]
[connection signal="body_entered" from="Atak" to="." method="_on_Atak_body_entered"]
[connection signal="body_exited" from="Atak" to="." method="_on_Atak_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
